--- a/Dockerfile.aarch64
+++ b/Dockerfile.aarch64
@@ -1,6 +1,6 @@
 FROM arm64v8/alpine
 COPY qemu-aarch64-static /usr/bin/
-MAINTAINER David Personette <dperson@gmail.com>
+MAINTAINER Jeff Sauer <jsauer@jouledata.com>
 
 # Install samba
 RUN apk --no-cache --no-progress upgrade && \
