--- a/Dockerfile.armhf
+++ b/Dockerfile.armhf
@@ -1,6 +1,6 @@
 FROM arm32v6/alpine
 COPY qemu-arm-static /usr/bin/
-MAINTAINER David Personette <dperson@gmail.com>
+MAINTAINER Jeff Sauer <jsauer@jouledata.com>
 
 # Install samba
 RUN apk --no-cache --no-progress upgrade && \
